--- a/Paper/paper.tex
+++ b/Paper/paper.tex
@@ -34,22 +34,23 @@ $^{2}$Institute for Theory \& Computation,
 
 \begin{abstract}
   We study a novel electromagnetic signature of supermassive black
-  hole binaries whose inspiral stars being dominated by gravitational
+  hole binaries whose inspiral starts being dominated by gravitational
   wave (GW) emission. Combined GW and electromagnetic observations of
   compact binary mergers would allow to use them as standard sirens
   for cosmology and a testing ground of general relativity.  If one of
   the binary members produces a radio jet, the helical chirping
   morphology of the jet can be used to infer the binary parameters.
-  For binaries with mass $10^7$--$10^{10}$ M$_\odot$ at redshifts
-  $z<0.5$, the jet precesses along a biconical surface due to the
-  binary's orbital motion.  When the binary enters the GW phase of its
+  The jet precesses along a biconical surface due to the binary's
+  orbital motion.  When the binary enters the GW phase of its
   evolution, the opening angle widens, the jet exhibits milliarcsecond
   scale wiggles and the conical surface of jet precession is twisted
-  due to the superluminal motion.  Monitoring these features in
-  current and archival data will place a lower limit on sources that
-  could be detected by eLISA and Pulsar Timing Arrays.  In the future,
-  microarcsecond interferometry with the Square Kilometer Array will
-  increase the potential usefulness of this technique.
+  due to the superluminal motion.  For binaries with mass
+  $10^7$--$10^{10}$ M$_\odot$ at redshifts $z<0.5$, monitoring these
+  features in current and archival data will place a lower limit on
+  sources that could be detected by eLISA and Pulsar Timing Arrays.
+  In the future, microarcsecond interferometry with the Square
+  Kilometer Array will increase the potential usefulness of this
+  technique.
 \end{abstract}
 
 \begin{keywords}
@@ -71,7 +72,7 @@ dynamical friction and form a gravitationally bound binary.  The newly
 formed binary then continues to lose its angular momentum and shrink
 by scattering ambient gas and stars.  In the final stage of the
 binary's evolution, emission of gravitational waves (GWs) becomes the
-predominant mode angular momentum loss, which results in the
+predominant mode of angular momentum loss, which results in the
 coalescence of the black holes.
 
 General relativisitic (GR) numerical simulations can predict the
@@ -82,7 +83,7 @@ signals of black hole coalescence.  Effects considered in the
 literature include afterglows due to infall of gas on the remnant
 black hole \citep{2005ApJ...622L..93M}, electromagnetic variability in
 the circumbinary disk due to shocks induced by the sudden mass loss of
-the binary due to GW emission at coalescence
+the binary following GW emission at coalescence
 \citep{2007APS..APR.S1010B}, flares from shocked remnants of accretion
 disks around recoiled remnant black hole \citep{2007PhRvL..99d1103L,
   2008ApJ...682..758S, 2009CQGra..26i4032H}, quasi-periodic
@@ -99,21 +100,21 @@ the recoiled remnant \citep{2011MNRAS.412...75S}.
 In addition to testing GR in the strong field limit, observations of
 electromagnetic counterparts will help localize sources of GWs for
 future detectors such as the Evolved Laser Interferometer Space
-Antenna (eLISA)\footnote{\url{https://www.elisascience.org}}, which would be
-capable of observing the peak GW luminosity for BH coalescence of
-$\sim 10^{57}$ erg$/$s up to large cosmological distances
+Antenna (eLISA)\footnote{\url{https://www.elisascience.org}}, which
+would be capable of observing the peak GW luminosity for BH
+coalescence of $\sim 10^{57}$ erg$/$s out to cosmological distances
 \citep{2003CQGra..20S..65H, 2013CQGra..30x4009S}.  Simultaneous
 detection of GW and electromagnetic signals from coalescing binaries
 will yield rich scientific pay-offs \citep{2003CQGra..20S..65H,
-  2005ApJ...629...15H}.  For example, by a redshift measurement of
-eLISA sources could constraint cosmological parameters.  Measurement
-of the black hole masses and spins from the GW signal will constrain
+  2005ApJ...629...15H}.  For example, redshift measurement of eLISA
+sources could constraint cosmological parameters.  Measurement of the
+black hole masses and spins from the GW signal could constrain
 accretion physics during coalescence.  But even before eLISA is
-launched, a search of electromagnetic signatures may point to the
-expected abundance of GW sources.
+launched, a search of electromagnetic signatures may help calibrate
+the expected abundance of GW sources.
 
 In this Letter we study the morphology of a jet emitted by one of the
-binary members during its final stage of evolution before coalescence,
+binary members during its final phase of evolution before coalescence,
 i.e., when the binary's dynamics is dominated by GW emission.  We show
 that the helical chirping morphology of the jet can be used to infer
 the binary parameters.
@@ -124,8 +125,7 @@ We study a BH binary formed following a gas-rich merger of two
 galaxies as a result of the processes described above.  We consider
 black holes with masses $M_1$ and $M_2$ in a circular orbit of radius
 $a$ around each other.  Let $M=M_1+M_2$.  For simplicity, we consider
-an equal-mass binary ($M_1=M_2$) on a circular orbit. We will consider
-unequal black holes masses and elliptical orbits below.  The orbital
+an equal-mass binary ($M_1=M_2$) on a circular orbit. The orbital
 speed of each black hole is given by \citep{2010PhRvD..81d7503L}
 \begin{equation}
   v = \frac{1}{2}\left(\frac{GM}{a}\right)^{1/2}\!\!\!\! = 5.8\times 10^3\, \mathrm{km~s}^{-1}M_8^{1/2}a_{16}^{-1/2},
@@ -159,11 +159,11 @@ The orbital period is
     \end{tikzpicture}
   \end{center}
   \caption{Jet and orbital configuration. The orbital velocity
-    $\mathbf{v}_\mathrm{orb}$ causes the jet to precess as the BH
-    moves along the orbit. The net jet velocity is
+    $\mathbf{v}_\mathrm{orb}$ causes the jet to precess as its source
+    BH moves along its binary orbit. The net jet velocity is
     $\tilde{\mathbf{v}}_\mathrm{jet}={\mathbf{v}}_\mathrm{orb}+{\mathbf{v}}_\mathrm{jet}$,
-    where $\mathbf{v}_\mathrm{jet}$ is its ejection velocity at the
-    source.}
+    where $\mathbf{v}_\mathrm{jet}$ is its ejection velocity of the
+    jet material at the source.}
   \label{fig:BH_orbit}
 \end{figure}
 
@@ -234,12 +234,12 @@ Figure~\ref{fig:evolve}.
   \end{center}
   \caption{The orbital velocity $\mathbf{v}_\mathrm{orbital}$
     introduces the jet precision angle $\psi$.  Without the orbital
-    motion, $\psi=0$ and the jet traces a cylindrical surface.  With
+    motion, $\psi=0$, and the jet traces a cylindrical surface.  With
     the orbital motion, the net red velocity vector oscillates around
     the solid black vector and produces a conical surface with $\psi$
     as its half-opening angle.  Note that $v_\mathrm{orb}$ is
     exagerated here.  In practice, $v_\mathrm{orb}\ll
-    v_\mathrm{jet}\sim c$.  This figure then shows that
+    v_\mathrm{jet}\sim c$.  The figure indicates that
     $\sin{\psi}\sim\tan{\psi}=v_\mathrm{orb}\cos{\chi}/v_\mathrm{jet}$.}
   \label{fig:jet}
 \end{figure}
@@ -258,11 +258,11 @@ angle of the cone is given by \citep{1993ApJ...409..130R}
 \begin{equation}
   \sin\psi = \frac{v_\mathrm{orb}\cos\chi}{v_\mathrm{jet}}.
 \end{equation}
-When the binary separation is where gravitational wave-induced
-inspiral begins, it has a velocity given by equation~(\ref{eqn:v}),
-and the separation between the two black holes at this instant is
-given by equation~(\ref{eqn:a}).  Also, from equation
-(\ref{eqn:vorb}), the orbital velocity of each BH evolves as
+When the binary separation reaches the point where gravitational
+wave-induced inspiral begins, the binary has a velocity given by
+equation~(\ref{eqn:v}), and a separation given by
+equation~(\ref{eqn:a}).  From equation (\ref{eqn:vorb}), the orbital
+velocity of each BH evolves as
 \begin{equation}
   \frac{\dot v_\mathrm{orb}}{v_\mathrm{orb}} = -\frac{1}{2}\frac{\dot a}{a}.
 \end{equation}
@@ -351,26 +351,25 @@ in the gas and GW-dominated phase.
 \end{center}
 \caption{The left panel shows forward and backward jets for an
   equal-mass binary with total mass $M=10^{10}$~M$_\odot$.  We have
-  assumed $i=40^\circ$, $\beta=0.9$, and $d = 100$~Mpc.  The jets are
-  twisted because of the apparant superluminal motion.  Also evident
-  is the opening of the jet and the radio jet chirp.  Right panel
-  shows normalised brightness of the inner 30~mas region of the
-  forward jet.}
+  assumed $i=40^\circ$, $\beta=0.9$, and angular diameter distance $d
+  = 100$~Mpc.  The jets are twisted because of the apparant
+  superluminal motion.  Also evident is the opening of the jet and the
+  radio jet chirp.  Right panel shows normalised brightness of the
+  inner 30~mas region of the forward jet.}
 \label{fig:jet_mdot1.0}
 \end{figure*}
 
-
 We now ask if it would be possible to observe the opening of the jet
-morphology.  In order to do this, it is necessary to map the above
+morphology.  For this purpose, it is necessary to map the above
 calculations to the observer's frame \citep{1982ApJ...262..478G}.  At
 a large distance compared to the binary's separation, the jet geometry
 is illustrated in Figure \ref{fig:jetgeom}.  Here the source frame of
 reference is shown by $x^\prime$, $y^\prime$, $z^\prime$ coordinate
 systems.  The $x$, $y$, $z$ coordinate system represents the
 observer's frame such that the $yz$ is the plane of the sky.  Further,
-the jet is oriented such that that the $y^\prime$ axis coincides with
-the $y$ axis, the original direction of jet emission is at an angle
-$i$ relative to the line of sight ($x$-axis).  For simplicity, we also
+the jet is oriented such that the $y^\prime$ axis coincides with the
+$y$ axis, the original direction of jet emission is at an angle $i$
+relative to the line of sight ($x$-axis).  For simplicity, we also
 assume that the $z^\prime$ axis is in the $xz$ plane.  Then the jet
 will precess on a cone with a half-opening angle $\psi$ and an angular
 velocity of precession $\Omega$.  In the source frame of reference,
@@ -391,22 +390,22 @@ and
 \begin{equation}
   y=v_yt/(1-v_x/c)
 \end{equation}
-respectively.  In angular coordinates, the motion on the sky is given
-by $\phi_z=z/d$ and $\phi_y=y/d$ where $d$ is the angular diameter
-distance of the binary.  Because of superluminal motion, the forward
-jet is stretched while the backward jet is compressed.
+respectively.  In angular coordinates, the motion of the jet on the
+sky is given by $\phi_z=z/d$ and $\phi_y=y/d$ where $d$ is the angular
+diameter distance of the binary.  Because of superluminal motion, the
+forward jet is stretched while the backward jet is compressed.
 
-Finally, we assume that the emission from each jet particle is
-optically thin at the frequency of observation with a spectrum in the
-rest frame of the particle given by $P(\nu)\propto \nu^{-\alpha}$
-\citep{1982ApJ...262..478G}.  The observed flux density $S(\nu)$ in erg
-cm$^{-2}$ Hz$^{-1}$ is given by
+Finally, we assume that the emission from each jet is optically thin
+at the frequency of observation with a spectrum in the rest frame of
+the particle given by $P(\nu)\propto \nu^{-\alpha}$
+\citep{1982ApJ...262..478G}.  The observed flux density $S(\nu)$ in
+erg cm$^{-2}$ Hz$^{-1}$ is given by
 \begin{equation}
   S(\nu)=S_r(\nu)D^{3+\alpha},
 \end{equation}
 where $D$ is the Doppler shift parameter
 $[\gamma(1-\beta\cos\phi)]^{-1}$ and $S_r$ is the rest frame flux
-density.  Further to consider the effects of jet evolution we assume
+density.  Further, to consider the effects of jet evolution we assume
 that $S_r$ decreases with time according to a simple power law
 \begin{equation}
   S_r\propto t^{-\delta}.
@@ -416,16 +415,16 @@ We assume $\delta=1$ and $\alpha=1$, hereafter
 
 \section{Flagging GW binaries and probing GR}
 
-As the binary evolves, its increasing orbital period and speed, and
-the apparant superluminal motion effect, together result in a jet
-morphology with an increasing opening angle and increasingly rapid
+As the binary evolves, the combination of increasing orbital period
+and speed, and the apparant superluminal motion effect, results in a
+jet morphology with an increasing opening angle and increasingly rapid
 periodic variation, together with a twisted shape.
 Figure~\ref{fig:jet_mdot1.0} shows these three features for an
 equal-mass binary with total mass $M=10^{10}$~M$_\odot$.  For
 concreteness, we have assumed $i=40^\circ$ and $\beta=0.9$.  The
 angular diameter distance to the binary is assumed to be $d =
 100$~Mpc, which corresponds to redshift $z\sim 0.3$.  The forward jet
-streched on the sky while the backward jet is compressed due to the
+streches on the sky while the backward jet is compressed due to the
 superluminal motion.  The right panel of Figure~\ref{fig:jet_mdot1.0}
 zooms into the inner region of the forward jet and shows that the
 binary creates wiggles in the jet morphology of the order of a
@@ -433,7 +432,7 @@ milli-arcsecond.  The duration of the binary evolution captured by
 Figure~\ref{fig:jet_mdot1.0} is 100 yr.  Although the system can be
 rescaled to different masses, times, and separation, the initial
 separation in Figure~\ref{fig:jet_mdot1.0} is $\sim 10^{-3}$~pc, when
-the binary enters it GW-dominated phase.  
+the binary enters it GW-dominated phase.
 
 The increasing orbital speed of the binary leads to an increase in the
 jet's precession angular velocity.  This increases the helicity of the
@@ -442,13 +441,13 @@ source.  This gives rise to a ``chirping'' morphology as seen in
 Figure~\ref{fig:jet_mdot1.0}.  The chirp is easier to resolve in jets
 that are closer to the line of sight, where superluminal motion can
 magnify the forward jet.  A chirping black hole is an unambiguous
-signature of a rapidly evolving binary BH; the chirp is direct
+signature of a rapidly evolving binary BH system; the chirp is direct
 reflection of the orbital velocity evolution in
 Figure~\ref{fig:evolve}.  Together, the three features of the jet
-morphology in Figure~\ref{fig:jet_mdot1.0}, viz., conical jet geometry
-with an increasing opening angle, a radio chirp geometry, and an
-asymmetrical shape, directly probe the dynamics of the binary in its
-GW phase. Observations of this milliarcsecond geometry can thus
+morphology in Figure~\ref{fig:jet_mdot1.0}, namely, conical jet
+geometry with an increasing opening angle, a radio chirp geometry, and
+an asymmetrical shape, directly probe the dynamics of the binary in
+its GW phase. Observations of such a milliarcsecond geometry can thus
 constrain GR in the strong field limit.
 
 \begin{table}
@@ -477,45 +476,44 @@ $\dot{\mathcal M}$ & Gas accretion rate\\
 
 Using a model of jet precession in a binary BH, we have shown that the
 jet morphology of a binary that is entering its GW-induced phase of
-inspiral shows a distinct chirping morphology. Jets in these binaries
-have a biconical morphology.  After the binary enters the GW phase,
-the opening angle of cone rapidly increases within a distance of tens
-of milli-arcseconds.  In addition, the periodicity of the jet's motion
-on the conical surface increases as the orbital period of the binary
-goes up in this stage of its evolution.  Finally, due to apparent
-superluminal motion and the widening opening angle, the jet is twisted
-into a peculiar morphology.  The jet geometry can be used to infer the
-set of dynamical and geometrical parameters, listed in
-Table~\ref{table:params}.
+inspiral exhibits a distinct chirping morphology. Jets in these
+binaries have a biconical morphology.  After the binary enters the GW
+phase, the opening angle of cone rapidly increases within a separation
+of tens of milli-arcseconds at a distance of 100~Mpc.  In addition,
+the periodicity of the jet's motion on the conical surface increases
+as the orbital period of the binary goes up in this stage of its
+evolution.  Finally, due to the apparent superluminal motion and the
+widening opening angle, the jet is twisted into a peculiar morphology.
+The jet geometry can be used to infer the set of dynamical and
+geometrical parameters, listed in Table~\ref{table:params}.
 
-These milli-arcsecond features can be resolved using long baseline
-radio interferometry \citep{2001ChJAA...1..236Q}.  At higher
-redshifts, jets are fainter and the wiggles become more difficult to
-resolve.  However, it might be possible to resolve binaries with very
-unequal mass ratios, eccentric orbits, or suitable inclinations.  The
-future Square Kilometer Array (SKA) should make microarcsecond
-resolution possible, which could increase the detection rate of these
-objects \citep{2014arXiv1412.5971P}.
+Milli-arcsecond features can be resolved using long baseline radio
+interferometry \citep{2001ChJAA...1..236Q}.  At higher redshifts, jets
+are fainter and the wiggles become more difficult to resolve.
+However, it might be possible to resolve binaries with very unequal
+mass ratios, eccentric orbits, or suitable inclinations.  The future
+Square Kilometer Array (SKA) should make microarcsecond resolution
+possible, which could increase the detection rate of these objects
+\citep{2014arXiv1412.5971P}.
 
 The jet morphology acts as an electromagnetic counterpart for chirping
 gravitational wave sources.  BH binaries are expected to be the
 brightest GW sources in the universe.  Current ground based GW
-detectors such as LIGO are sensitive to low-mass BH binaries at high
-redshift, which would be difficult to detect with this method.
+detectors such as LIGO are sensitive to intermediate-mass BH binaries
+at high redshift, which would be difficult to detect with our method.
 However, future detectors such as eLISA are sensitive to GW emission
 from $10^7$--$10^9$ M$_\odot$ BHs \citep{2013CQGra..30x4009S}.  Pulsar
 Timing Arrays are sensitive to even higher binary masses.  Monitoring
-of jet morphologies with features outlined in this paper will put a
-lower bound on the expected abundance of bright GW sources for this
-experiments. Moreover, combined GW and electromagnetic observations of
+of jet morphologies for the features outlined in this letter will put
+a lower bound on the expected abundance of bright GW
+sources. Moreover, combined GW and electromagnetic observations of
 compact binary mergers should enable detailed studies of astrophysical
-processes in the strong-field gravity regime
-\citep{2005ApJ...629...15H}.
+processes in the strong-field GR regime \citep{2005ApJ...629...15H}.
 
-We make the code implementing the model presented in this Letter
+We make the code for implementing the model presented in this Letter
 available at \url{https://github.com/gkulkarni/JetMorphology} under
 the MIT open source software license.  This code can be used to
-explore the parameter space of the model. 
+explore the parameter space of the model.
 
 \section*{Acknowledgments}
 
